--- a/index.html
+++ b/index.html
@@ -1,73 +1,72 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>信息科AI助手</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
     body {
-      font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      background: #f4f6f8;
-      color: #333;
+      font-family: 'PingFang SC', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      margin: 0;
+      background: linear-gradient(to bottom, #f8fafc, #e2e8f0);
+    }
+    .container {
+      max-width: 900px;
+      margin: 0 auto;
+      height: 100vh;
       display: flex;
       flex-direction: column;
-      min-height: 100vh;
-    }
-    header {
-      background-color: #2c3e50;
-      color: white;
       padding: 1rem;
+    }
+    .header {
       text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-    main {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 1rem;
+      padding: 1rem 0;
+      color: #1f2937;
     }
     .iframe-container {
-      width: 100%;
-      max-width: 1200px;
-      height: 100%;
-      min-height: 700px;
-      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-      border-radius: 12px;
+      flex: 1;
+      border-radius: 0.75rem;
       overflow: hidden;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       background: white;
     }
     iframe {
       width: 100%;
       height: 100%;
+      min-height: 600px;
       border: none;
     }
-    @media (max-width: 768px) {
-      header {
-        font-size: 1.2rem;
+    @media (max-width: 640px) {
+      .container {
+        padding: 0.5rem;
+        height: 100vh;
       }
       .iframe-container {
-        min-height: 600px;
+        border-radius: 0;
+      }
+      iframe {
+        min-height: 100%;
+      }
+      .header {
+        font-size: 1.25rem;
+        padding: 0.5rem 0;
       }
     }
   </style>
 </head>
 <body>
-  <header>信息科AI助手</header>
-  <main>
+  <div class="container">
+    <div class="header">
+      <h1 class="text-2xl font-bold">信息科AI助手</h1>
+    </div>
     <div class="iframe-container">
       <iframe
         src="http://14.116.240.82:30080/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
-        allow="microphone">
-      </iframe>
+        frameborder="0"
+        allow="microphone"
+      ></iframe>
     </div>
-  </main>
+  </div>
 </body>
 </html>
