--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             cursor: pointer;
             display: flex;
             align-items: center;
-            justify-content: center;gemini-2.5-flash
+            justify-content: center;sangfor-acip
             background-color: rgba(0, 0, 0, 1);
         }
     </style>
@@ -193,7 +193,7 @@
                 <div class="toolbar-group">
                     <label for="model-selector">Model:</label>
                     <select id="model-selector">
-                        <option value="gemini-2.5-flash">gemini-2.5-flash</option>
+                        <option value="sangfor-acip">sangfor-acip</option>
                         <option value="doubao-1-5-thinking">DOUBAO_1_5_thinking</option>
                         <option value="doubao-1-5">DOUBAO_VISION</option>
                     </select>
@@ -520,3 +520,4 @@
     </script>
 </body>
 </html>
+
