--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       input.value = '';
 
       try {
-        const response = await fetch('http://14.116.240.82:30080/api/v1/conversation', {
+        const response = await fetch('https://14.116.240.82:1453/api/v1/conversation', {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
@@ -109,3 +109,4 @@
   </script>
 </body>
 </html>
+
