--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     <!-- iframe容器 - 占据剩余空间 -->
     <div class="iframe-container pt-[56px] pb-0">
-        <iframe src="https://14.116.240.82:1453/chatbot/Kr17mLEiTY6oyCHM2sYHgw" class="w-full h-full border-0" frameborder="0" allow="microphone" allowfullscreen="" title="智能聊天助手"></iframe>
+        <iframe src="http://14.116.240.82:30080/chatbot/Kr17mLEiTY6oyCHM2sYHgw" class="w-full h-full border-0" frameborder="0" allow="microphone" allowfullscreen="" title="智能聊天助手"></iframe>
     </div>
     
     <script>
@@ -90,3 +90,4 @@
 
 
 </body></html>
+
