--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div class="iframe-wrapper">
             <!-- 嵌入用户提供的iframe -->
             <iframe
-                src="https://14.116.240.82:1453/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
+                src="http://14.116.240.82:30080/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
                 allow="microphone">
             </iframe>
         </div>
@@ -163,3 +163,4 @@
     </div>
 </body>
 </html>
+
