--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="frame-container">
             <!-- 直接嵌入目标链接 -->
             <iframe
-                src="https://14.116.240.82:1453/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
+                src="http://14.116.240.82:30080/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
                 sandbox="allow-scripts allow-same-origin allow-forms"
                 allow="microphone">
             </iframe>
@@ -78,3 +78,4 @@
     </div>
 </body>
 </html>
+
