--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
     </div>
 
     <div class="tip">
-        提示：若遇空白页，请尝试<a href="https://14.116.240.82:1453/chatbot/Kr17mLEiTY6oyCHM2sYHgw" target="_blank">直接访问源地址</a>
+        提示：若遇空白页，请尝试<a href="http://14.116.240.82:30080/chatbot/Kr17mLEiTY6oyCHM2sYHgw" target="_blank">直接访问源地址</a>
     </div>
 </body>
 </html>
+
 
