--- a/index.html
+++ b/index.html
@@ -66,10 +66,11 @@
         <div class="frame-container">
             <!-- 直接嵌入目标链接 -->
             <iframe
-                src="https://14.116.240.82:1453/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
-                sandbox="allow-scripts allow-same-origin allow-forms"
-                allow="microphone">
-            </iframe>
+ src="https://14.116.240.82:1453/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
+ style="width: 100%; height: 100%; min-height: 700px"
+ frameborder="0"
+ allow="microphone">
+</iframe>
         </div>
     </div>
 
@@ -78,6 +79,7 @@
     </div>
 </body>
 </html>
+
 
 
 
