--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="frame-container">
             <!-- 直接嵌入目标链接 -->
             <iframe
- src="http://14.116.240.82:30080/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
+ src="https://14.116.240.82:1435/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
  style="width: 100%; height: 100%; min-height: 700px"
  frameborder="0"
  allow="microphone">
@@ -79,6 +79,7 @@
     </div>
 </body>
 </html>
+
 
 
 
