--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="tip">
-        提示：若遇空白页，请尝试<a href="http://14.116.240.82:30080/chatbot/Kr17mLEiTY6oyCHM2sYHgw" target="_blank">直接访问源地址</a>
+        青海省红十字医院 统计信息科 测试版本
     </div>
 
     <script>
@@ -151,3 +151,4 @@
     </script>
 </body>
 </html>
+
