--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     </div>
 
     <div class="tip">
-        青海省红十字医院 统计信息科 测试版本
+        统计信息科 测试版本
     </div>
 
     <script>
@@ -151,4 +151,5 @@
     </script>
 </body>
 </html>
+
 
