--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             
             <!-- 直接嵌入目标链接 -->
             <iframe
-                src="http://14.116.240.82:30080/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
+                src="https://14.116.240.82:1453/chatbot/Kr17mLEiTY6oyCHM2sYHgw"
                 frameborder="0"
                 allow="microphone"
                 onload="document.getElementById('loading-indicator').style.display='none'">
@@ -151,6 +151,7 @@
     </script>
 </body>
 </html>
+
 
 
 
