--- a/index1.html
+++ b/index1.html
@@ -98,7 +98,7 @@
     
     <script>
         // API配置
-        const API_URL = 'http://14.116.240.82:30080/api/v1/chat/completions';
+        const API_URL = 'https://14.116.240.82:1453/api/v1/chat/completions';
         const API_KEY = 'sk-e2706a82412705c0e90a26ba311da546';
         const MODEL_ID = '2abd7b98-b122-4d8e-a8c8-21ccdac60783';
         
